# Leitmotiv

./: CMakeLists.txt  README.md
src/: Character.cpp  Character.hpp  Idea.cpp  Idea.hpp  Motiv.cpp  Motiv.hpp  Player.cpp  Player.hpp  main.cpp
src/app/: App.cpp  App.hpp
src/widgets/: AudioPlayerPanel.cpp  AudioPlayerPanel.hpp  IdeasPanel.cpp  IdeasPanel.hpp  MainFrame.cpp  MainFrame.hpp  MotivsPanel.cpp  MotivsPanel.hpp  RightPanel.cpp  RightPanel.hpp  WorkspacePanel.cpp  WorkspacePanel.hpp
tests/: PlayerTests.cpp
